--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,21 @@
 .jumbotron {
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
-    background: purple;
+    background: rgb(158, 16, 158);
     color: floralwhite;
+}
+
+address {
+    font-size: 80%;
+    margin: 0px;
+    color: #0f0f0f;
+}
+
+body {
+    padding: 50px 0px 0px 0px;
+    z-index;
+}
+
+.navbar-dark {
+    background-color: #512da8;
 }
