--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ address {
 
 body {
     padding: 50px 0px 0px 0px;
-    z-index;
+    z-index: auto;
 }
 
 .navbar-dark {
@@ -43,4 +43,19 @@ body {
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
     padding: 10px;
+}
+
+.carousel {
+    background: #512da8;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    min-height: 300px;
 }
