--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,10 @@ body {
     left: 0px;
     min-height: 300px;
 }
+
+#carouselButton {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
